syntax = "proto3";

package Base;


message ClientInfo
{
	string name = 1;
	uint32 listenGroup = 2;
}


