syntax = "proto2";

package Base;

message Join
{
	required string name = 1;
	required string serverID = 2;
	optional string ID = 3;
}
